pridani-pozadi+zmena barev

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Orlické Hory</title>
 </head>
-<body>
+<body background="img/background.jpg">
 	<header>
 		<video id="bcg-video" autoplay muted loop>
 			<source src="img/orl-video-sun.mp4">
@@ -71,5 +71,5 @@
 			<p>Copyright &copy; 2023 Region Orlické hory. Všechna práva vyhrazena.</p>
 		</div>
 	</footer>
-</body>
+</bod>
 </html>
