index+o-regionu | edit

--- a/o-regionu.html
+++ b/o-regionu.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="o-regionu-style.css">
-    <title>O Regionu</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Orlické Hory</title>
 </head>
-<body>
-    <header>
-        <img src="img/img-o-regionu.jpg">
-        <div id="container">
-            <nav>
-                <ul>
-                    <li><a href="index.html"><h1>Orlické&nbsp;Hory</h1></a></li>
-                    <div id="bar-to-right">
-                        <li><a href="o-regionu/o-regionu.html">O&nbsp;Regionu</a></li>
-                        <li><a href="#">Tipy&nbsp;na&nbsp;Výlet</a></li>
-                        <li><a href="#">Fotografie</a></li>
-                    </div>
-                </ul>
-                <div class="clearfix"></div>
-            </nav>
-        </div>
-    </header>
+<body background="img/background.jpg">
+	<header>
+		<video id="bcg-video" autoplay muted loop>
+			<source src="img/orl-video-sun.mp4">
+		</video>
+		<div id="container">
+			<nav>
+				<ul>
+					<li><a href="index.html"><h1>Orlické&nbsp;Hory</h1></a></li>
+					<div id="bar-to-right">
+						<li><a href="#">O&nbsp;Regionu</a></li>
+						<li><a href="#">Tipy&nbsp;na&nbsp;Výlet</a></li>
+						<li><a href="#">Fotografie</a></li>
+					</div>
+				</ul>
+				<div class="clearfix"></div>
+			</nav>
+			<h2 id="slogan">Příroda na dosah ruky</h2>
+			<p id="btn-vice">DOZVĚDĚT SE VÍCE</p>
+		</div>
+	</header>
 
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
-</body>
+	<main>
+	</main>
+	<div class="clearfix"></div>
+	<footer>
+		<div id="container">
+			<p>Copyright &copy; 2023 Region Orlické hory. Všechna práva vyhrazena.</p>
+		</div>
+	</footer>
+</bod>
 </html>
