--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<video id="bcg-video" autoplay muted loop>
 			<source src="img/orl-video-sun.mp4">
 		</video>
-		<div id="container">
+		<div class="container">
 			<nav>
 				<ul>
 					<li><a href="#"><h1>Orlické&nbsp;Hory</h1></a></li>
@@ -28,7 +28,7 @@
 	</header>
 
 	<main>
-		<div id="container">
+		<div class="container">
 			<div id="odst-1">
 				<img id="img-odst-1" src="img/orl-zima-louka.jpg">
 				<div class="text-down">
@@ -67,7 +67,7 @@
 	</main>
 	<div class="clearfix"></div>
 	<footer>
-		<div id="container">
+		<div class="container">
 			<p>Copyright &copy; 2023 Region Orlické hory. Všechna práva vyhrazena.</p>
 		</div>
 	</footer>
