--- a/o-regionu.html
+++ b/o-regionu.html
@@ -27,13 +27,13 @@
 
 	<main>
         <div class="container">
-			<h2>Kde Orlické hory najdete?</h2>
+			<h2 id="hory-najdete">Kde Orlické hory najdete?</h2>
             <p>Malebný region Orlických hor a Podorlicka leží v severní části východních Čech při polské hranici. Nejvyšší horou je Velká Deštná (1115 m. n. m.). Pásmo hor začíná nad městem Náchod, dále pokračuje přes střediska jako je Rokytnice a Deštné až k obci Jablonné nad Orlicí a Bartošovice. Zde u Zemské Brány pásmo Orlických hor končí a je už na dohled další pohoří Králického Sněžníku.</p>
 			<img src="img/o-regionu-vyhled.jpg" alt="">
 			<div class="con1">
 				<h2>Orlické hory v létě</h2>
 				<p>Za Vaši návštěvu ale stojí Orlické hory i v létě. Kopce jsou protkány sítí naučných stezek, turistických značek a cyklotras ideálních pro rodiny s dětmi i zkušené turisty a cyklisty. Milovníci vojenské historie zajásají nad prohlídkou zdejší linie bunkrů a několika přístupných pevností, z nichž je nejznámější Hanička.</p>
-				<img src="img/" alt="">
+				<img src="img/ciklista.jpg" alt="">
 			</div>
 			<div class="con2">
 				<h2>Orlické hory v zimě</h2>
@@ -42,10 +42,12 @@
 			</div>
 			<h2>Dovolená na horách</h2>
 			<p>Orlické hory jsou ideálním místem pro Vaši dovolenou. Množství turistických zajímavostí je doplněno také širokou nabídkou kvalitního ubytování. Naleznete zde luxusní hotely s bazénem a wellness, menší horské hotýlky, příjemné rodinné penziony, moderní apartmány, ale také typické útulné horské chalupy. Z rozličné možnosti jistě uspokojí každého návštěvníka tohoto horského regionu a přispějí pohodovému strávení dovolené nebo pouze prodlouženého víkendu.</p>
-			<img src="img/" alt="">
-			<h2>Poznejte všechny oblasti regionu</h2>
-			<p>Orlické hory je možné rozdělit na dvě části s centrem v Deštné. Oblast od Olešnice k Deštné je pomyslnou branou Orlických hor. Pásmo táhnoucí se na opačnou stranu od Deštné k Rokytnici pak představuje pravé Orlické hory s polozapomenutými vesničkami a hlubokými lesy.</p>
-			<img src="img/" alt="">
+			<img src="img/louka-1.jpg" alt="">
+			<img class="oblast-reg-img" src="img/planina-strom-uprostred.jpg" alt="">
+			<div class="oblast-reg">
+				<h2>Poznejte všechny oblasti regionu</h2>
+				<p>Orlické hory je možné rozdělit na dvě části s centrem v Deštné. Oblast od Olešnice k Deštné je pomyslnou branou Orlických hor. Pásmo táhnoucí se na opačnou stranu od Deštné k Rokytnici pak představuje pravé Orlické hory s polozapomenutými vesničkami a hlubokými lesy.</p>
+			</div>
         </div>
 	</main>
 	<div class="clearfix"></div>
