--- a/o-regionu.html
+++ b/o-regionu.html
@@ -30,6 +30,7 @@
 			<h2 id="hory-najdete">Kde Orlické hory najdete?</h2>
             <p>Malebný region Orlických hor a Podorlicka leží v severní části východních Čech při polské hranici. Nejvyšší horou je Velká Deštná (1115 m. n. m.). Pásmo hor začíná nad městem Náchod, dále pokračuje přes střediska jako je Rokytnice a Deštné až k obci Jablonné nad Orlicí a Bartošovice. Zde u Zemské Brány pásmo Orlických hor končí a je už na dohled další pohoří Králického Sněžníku.</p>
 			<img src="img/o-regionu-vyhled.jpg" alt="">
+			<div class="mezera"></div>
 			<div class="con1">
 				<h2>Orlické hory v létě</h2>
 				<p>Za Vaši návštěvu ale stojí Orlické hory i v létě. Kopce jsou protkány sítí naučných stezek, turistických značek a cyklotras ideálních pro rodiny s dětmi i zkušené turisty a cyklisty. Milovníci vojenské historie zajásají nad prohlídkou zdejší linie bunkrů a několika přístupných pevností, z nichž je nejznámější Hanička.</p>
