--- a/o-regionu.html
+++ b/o-regionu.html
@@ -43,10 +43,10 @@
 			</div>
 			<h2>Dovolená na horách</h2>
 			<p>Orlické hory jsou ideálním místem pro Vaši dovolenou. Množství turistických zajímavostí je doplněno také širokou nabídkou kvalitního ubytování. Naleznete zde luxusní hotely s bazénem a wellness, menší horské hotýlky, příjemné rodinné penziony, moderní apartmány, ale také typické útulné horské chalupy. Z rozličné možnosti jistě uspokojí každého návštěvníka tohoto horského regionu a přispějí pohodovému strávení dovolené nebo pouze prodlouženého víkendu.</p>
-			<img src="img/louka-1.jpg" alt="">
-			<img class="oblast-reg-img" src="img/planina-strom-uprostred.jpg" alt="">
+			<img id="img-dovolena" src="img/louka-1.jpg" alt="">
+			<img class="img-oblasti" src="img/planina-strom-uprostred.jpg" alt="">
 			<div class="oblast-reg">
-				<h2>Poznejte všechny oblasti regionu</h2>
+				<h2>Poznejte všechny oblasti&nbsp;regionu</h2>
 				<p>Orlické hory je možné rozdělit na dvě části s centrem v Deštné. Oblast od Olešnice k Deštné je pomyslnou branou Orlických hor. Pásmo táhnoucí se na opačnou stranu od Deštné k Rokytnici pak představuje pravé Orlické hory s polozapomenutými vesničkami a hlubokými lesy.</p>
 			</div>
         </div>
