--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<li><a href="#"><h1>Orlické&nbsp;Hory</h1></a></li>
 					<div id="bar-to-right">
 						<li><a href="o-regionu.html">O&nbsp;Regionu</a></li>
-						<li><a href="#">Tipy&nbsp;na&nbsp;Výlet</a></li>
+						<li><a href="tipy-na-vylet.html">Tipy&nbsp;na&nbsp;Výlet</a></li>
 						<li><a href="#">Fotografie</a></li>
 					</div>
 				</ul>
