--- a/tipy-na-vylet.html
+++ b/tipy-na-vylet.html
@@ -2,7 +2,8 @@
 <html lang="cs">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="tipy-style.css">
+	<link rel="stylesheet" type="text/css" href="styles/tipy-style.css">
+	<link rel="stylesheet" href="styles/grid.css">
 	<title>Orlické Hory</title>
 </head>
 <body background="img/background.jpg">
@@ -14,8 +15,8 @@
 					<li><a href="index.html"><h1>Orlické&nbsp;Hory</h1></a></li>
 					<div id="bar-to-right">
 						<li><a href="o-regionu.html">O&nbsp;Regionu</a></li>
-						<li><a href="#">Tipy&nbsp;na&nbsp;Výlet</a></li>
-						<li><a href="#">Fotografie</a></li>
+						<li><a href="tipy-na-vylet.html">Tipy&nbsp;na&nbsp;Výlet</a></li>
+						<li><a href="foto.html">Fotografie</a></li>
 					</div>
 				</ul>
 				<div class="clearfix"></div>
@@ -26,7 +27,59 @@
 
 	<main>
         <div class="container">
+			<section class="row obrazky">
+				<div class="grid-radek">
+					<div class="col span-1-of-3 bunka">
+						<a href="serlich.html">
+						<img src="img/miniatury/miniatura-serlich.jpg" alt="">
+						<h2>Šerlich</h2>
+						<p>Horská osada Šerlich leží v nadmořské výšce 990 m pod vrcholem stejnojmenné hory Orlických hor. Je situována při hranici s Polskem asi 3 a půl km od Deštného.</p>
+						</a>
+					</div>
+					
+					<div class="col span-1-of-3 bunka">
+						<a href="podstejn.html">
+						<img src="img/miniatury/miniatura-podstejn.jpg" alt="">
+						<h2>Potštejn</h2>
+						<p>Vydejte se hledat poklad na hrad Potštejn, který se sklání nad stejnojmennou vesničkou. Tato zřícenina má opravdovou atmosféru opředenou tajemstvím.</p>
+						</a>
+					</div>
 
+					<div class="col span-1-of-3 bunka">
+						<a href="">
+						<img src="img/miniatury/miniatura-ricky.jpg" alt="">
+						<h2>Skiareál Říčky</h2>
+						<p>Nadmořská výška, moderní šesti sedačková vyhřívaná lanovka a výhodná orientace sjezdových tratí. To vše jsou přednosti skiareálu Říčky v Orlických horách.</p>
+						</a>
+					</div>
+				</div>
+
+				<div class="grid-radek">
+					<div class="col span-1-of-3 bunka">
+						<a href="anna.html">
+						<img src="img/miniatury/miniatura-anna.jpg" alt="">
+						<h2>Rozhledna Anna</h2>
+						<p>Nová rozhledna, která vyrostla na Anenském vrchu v roce 2010, dostala jméno Anna po vrchu na kterém stojí a také po sv. Anně, patronce Orlických hor.</p>
+						</a>
+					</div>
+
+					<div class="col span-1-of-3 bunka">
+						<a href="">
+						<img src="img/miniatury/miniatura-hanicka.jpg" alt="">
+						<h2>Tvrz Hanička</h2>
+						<p>Probádejte podzemí jedné z nejznámějších vojenských pevností v Čechách, vydejte se do podzemí vojenské tvrze Hanička, kterou naleznete v srdci Orlických hor.</p>
+						</a>
+					</div>
+
+					<div class="col span-1-of-3 bunka">
+						<a href="destna.html">
+						<img src="img/miniatury/miniatura-destna.jpg" alt="">
+						<h2>Velká Deštná</h2>
+						<p>Rozhledna je vysoká 19m. Ocelová konstrukce je obložené dřevem. Návštěvníkům poskytuje dechberoucí výhled na polské Stolové hory, Králický Sněžník, Krkonoše a Ještěd.</p>
+						</a>
+					</div>
+				</div>
+			</section>
 		</div>
 	</main>
 	<div class="clearfix"></div>
