--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<title>Orlické Hory</title>
 </head>
 <body background="img/background.jpg">
@@ -13,7 +13,7 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li><a href="#"><h1>Orlické&nbsp;Hory</h1></a></li>
+					<li><a href="index.html"><h1>Orlické&nbsp;Hory</h1></a></li>
 					<div id="bar-to-right">
 						<li><a href="o-regionu.html">O&nbsp;Regionu</a></li>
 						<li><a href="tipy-na-vylet.html">Tipy&nbsp;na&nbsp;Výlet</a></li>
