--- a/o-regionu.html
+++ b/o-regionu.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="o-regionu-style.css">
+	<link rel="stylesheet" type="text/css" href="styles/o-regionu-style.css">
 	<title>Orlické Hory</title>
 </head>
 <body background="img/background.jpg">
@@ -13,8 +13,8 @@
 				<ul>
 					<li><a href="index.html"><h1>Orlické&nbsp;Hory</h1></a></li>
 					<div id="bar-to-right">
-						<li><a href="#">O&nbsp;Regionu</a></li>
-						<li><a href="#">Tipy&nbsp;na&nbsp;Výlet</a></li>
+						<li><a href="o-regionu.html">O&nbsp;Regionu</a></li>
+						<li><a href="tipy-na-vylet.html">Tipy&nbsp;na&nbsp;Výlet</a></li>
 						<li><a href="#">Fotografie</a></li>
 					</div>
 				</ul>
