--- a/tipy-na-vylet.html
+++ b/tipy-na-vylet.html
@@ -46,7 +46,7 @@
 					</div>
 
 					<div class="col span-1-of-3 bunka">
-						<a href="">
+						<a href="ricky.html">
 						<img src="img/miniatury/miniatura-ricky.jpg" alt="">
 						<h2>Skiareál Říčky</h2>
 						<p>Nadmořská výška, moderní šesti sedačková vyhřívaná lanovka a výhodná orientace sjezdových tratí. To vše jsou přednosti skiareálu Říčky v Orlických horách.</p>
