--- a/tipy-na-vylet.html
+++ b/tipy-na-vylet.html
@@ -64,7 +64,7 @@
 					</div>
 
 					<div class="col span-1-of-3 bunka">
-						<a href="">
+						<a href="hanicka.html">
 						<img src="img/miniatury/miniatura-hanicka.jpg" alt="">
 						<h2>Tvrz Hanička</h2>
 						<p>Probádejte podzemí jedné z nejznámějších vojenských pevností v Čechách, vydejte se do podzemí vojenské tvrze Hanička, kterou naleznete v srdci Orlických hor.</p>
