--- a/o-regionu.html
+++ b/o-regionu.html
@@ -15,7 +15,7 @@
 					<div id="bar-to-right">
 						<li><a href="o-regionu.html">O&nbsp;Regionu</a></li>
 						<li><a href="tipy-na-vylet.html">Tipy&nbsp;na&nbsp;Výlet</a></li>
-						<li><a href="#">Fotografie</a></li>
+						<li><a href="foto.html">Fotografie</a></li>
 					</div>
 				</ul>
 				<div class="clearfix"></div>
