--- a/ricky.html
+++ b/ricky.html
@@ -29,7 +29,7 @@
                 <h1>Skicentrum Říčky</h1>
                 <p>Ski centrum Říčky se nachází v Orlických horách na jihovýchodní straně vrchu Zakletý. Díky své nadmořské výšce, moderní lanovce, výhodné orientaci sjezdových tratí, jejich délce a systému technického sněhu se jedná o nejlepší středisko sjezdového lyžování v Orlických horách. Areál se nachází na jihovýchodní straně vrchu Zakletý v nadmořské výšce 740 – 992 m n. m. Díky své nadmořské výšce, moderní lanovce, výhodné orientaci sjezdových tratí, jejich délce a rozmanitosti a systému technického sněhu se jedná o jedno z nejlepších středisek sjezdového lyžování v Orlických horách a zároveň jedno z předních středisek v České republice. Areál disponuje zmodernizovaným zasněžovacím systémem, který umožňuje produkci sněhu i při vyšších teplotách. Areál disponuje 6sadačkovou lanovou dráhou s bublinou a nabízí tři sjezdové tratě různých obtížností, vhodné jak pro rekreační lyžaře, tak i velmi zkušené a náročné sjezdaře. Ski centrum je vybaveno výkonným zasněžovacím systémem a nejmodernější technikou na úpravu sjezdových tratí. Pohodlný odbavovací systém, prostorná lyžařská škola s pohyblivým pásem, kolotočem a dalšími pomůckami pro efektivní výuku jízdy na lyžích nebo snowboardu.</p>
 
-                <img src="img/rozhledna-destna.jpg" alt="">
+                <img src="img/ski-ricky.jpg" alt="">
 
                 <h2>Ski centrum disponuje čtyřmi sjezdovkami, 
                     jednou lanovkou a dvěma vleky</h2>
