--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
 				<div class="clearfix"></div>
 			</nav>
 			<h2 id="slogan">Příroda na dosah ruky</h2>
-			<p id="btn-vice">DOZVĚDĚT SE VÍCE</p>
 			</div>
 	</header>
 
 	<main>
-		<div class="container">
+		<div class="container" id="vice">
 			<div id="odst-1">
 				<img id="img-odst-1" src="img/orl-zima-louka.jpg">
 				<div class="text-down">
